- make `RGFW_image_copy` a public function
- add `RGFW_formatARGB8` and `RGFW_formatRGBA8`
- fix inconsistent mouse function naming
- `RGFW_window_mouseHold` -> `RGFW_window_holdMouse`, `RGFW_window_mouseUnhold` -> `RGFW_window_unholdMouse`
- `RGFW_getGlobalMousePoint` -> RGFW_getMousePoint`
- `RGFW_window_mouseHidden` -> `RGFW_window_isMouseHidden`
- fix EGL and OpenGL extension checking

Release:    RGFW 1.7 (May 6, 2025)
-----------------------------------------------
This release focuses on improving bug fixes and supporting more edge-cases. It also continues to work towards feature parity with GLFW.
-----------------------------------------------

breaking changes:
- Rename `RGFW_window_checkFPS` to `RGFW_checkFPS`
- Change `RGFW_window_setShouldClose(RGFW_window)` to `RGFW_window_setShouldClose(RGFW_window, RGFW_BOOL)`
- Rename `RGFW_setMouseNotifyCallBack` → `RGFW_setMouseNotifyCallback`
- Rename `windowResizeCallback` → `windowResizedCallback`
- Rename `windowMoveCallback` → `windowMovedCallback`
- Change return type of `RGFW_getProcAddress` to `RGFW_proc`
- `event.inFocus` removed — use `RGFW_window_isInFocus()` instead

-----------------------------------------------

major changes:
- **Event Queue Rewrite**
  - Replace internal event passing system (WASM, WinAPI, macOS) with `RGFW_eventQueuePush` / `RGFW_eventQueuePop`
- **Platform-Independent Timing**
  - `RGFW_getTime` and `RGFW_getTimeNS` now platform-independent
  - Add `RGFW_setTime` (called with `0` at window init)
- **New OpenGL and Buffer Management**
  - Add `RGFW_window_swapBuffers_software` and `RGFW_window_swapBuffers_OpenGL`
  - Add `RGFW_window_initOpenGL` and `RGFW_window_freeOpenGL`
  - Add `RGFW_proc` typedef and update `RGFW_getProcAddress`
  - Default multisampling is now 0 (more consistent with GLFW)
- **Improved Software Rendering Support**
  - Better macOS and wasm software rendering
  - Use direct software rendering in wasm (no OpenGL required)
- **Flags and Focus Enhancements**